--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
       <div id="timer">Time Left: <span id="time-left">30</span> seconds</div>
     </div>
 
+    <div id="endgame-screen">
+      <h2>Game Over!</h2>
+      <p>Your final score: <span id="final-score"></span></p>
+      <p id="endgame-message">Result</p>
+      <button id="restart-button">Restart</button>
+    </div>
+
     <script src="./js/script.js"></script>
   </body>
 </html>
