split logic into classes

--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
       <button id="restart-button">Restart</button>
     </div>
 
-    <script src="./js/script.js"></script>
+    <script type="text/javascript" src="js/mouse.js"></script>
+    <script type="text/javascript" src="js/cheese.js"></script>
+    <script type="text/javascript" src="js/obstacle.js"></script>
+    <script type="text/javascript" src="js/game.js"></script>
+    <script type="text/javascript" src="js/script.js"></script>
   </body>
 </html>
