--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
     </div>
 
     <div id="game-container">
-      <div id="mouse">
-        <!-- <img src="./images/running_mouse.png" alt="" /> - -->
-      </div>
+      <div id="mouse"></div>
       <div id="cheese"></div>
-      <div id="score">Score: <span id="score-value">0</span></div>
       <div id="timer">Time Left: <span id="time-left">30</span> seconds</div>
+      <div id="score">Score: <span id="score-value">0</span></div>
+      <div id="lives">Lives : <span id="lives-value">3</span></div>
+      <div id="tom"></div>
     </div>
 
     <div id="endgame-screen">
