modify style for splash screen

--- a/index.html
+++ b/index.html
@@ -9,11 +9,38 @@
   <body>
     <div id="splash-screen">
       <!-- <img src="./images/logo.png" alt="" class="logo-img" /> -->
-      <br />
-      <button id="start-button">Start Game</button>
-      <p>Use the left and right arrow to let Jerry catch cheese!</p>
+
       <!-- <img src="./images/arrows.png" alt="" class="arrows-img" /> -->
+
+      <div class="instructions">
+        <h3>HOW TO PLAY GAME:</h3>
+        <h4>Beware of Tom Cat , if you get caught bei him you loose !</h4>
+        <h4>beware if you get caught 3 times you loose!</h4>
+        <h4>Collect all the cheese during 15 second, well done you win!</h4>
+      </div>
+      <div class="controls">
+        <h4>Use Left Right Up Down</h4>
+        <img
+          src="/images/arrow-keys.png"
+          alt="Controls Image"
+          class="controls-img"
+        />
+      </div>
+
+      <div class="columnCharacter">
+        <img src="/images/tom-and-gerry.png" height="250px" alt="" />
+      </div>
+      <div></div>
+      <button id="start-button">Start Game</button>
+      <h5>A game made by Shaza Kashlan</h5>
+      <h5>Cartoon created from 1940 by William Hanna and Joseph Barbera</h5>
     </div>
+
+    <!-- <div id="sidebar">
+  <div id="score">Score: <span id="score-value">0</span></div>
+  <div id="timer">Time Left: <span id="time-left">30</span> seconds</div>
+  <div id="lives">Lives: <span id="lives-value">3</span></div>
+</div> -->
 
     <div id="game-container">
       <div id="mouse"></div>
