style game over screen

--- a/index.html
+++ b/index.html
@@ -52,9 +52,19 @@
     </div>
 
     <div id="endgame-screen">
+      <div id="win-endscreen">
+        <img src="/images/win.png" height="280px" alt="" />
+        <div id="win2"></div>
+      </div>
+      <div id="lose-timer-endscreen">
+        <img src="/images/lose.png" height="280px" alt="" />
+      </div>
+      <div id="lose-catch-endscreen">
+        <img src="/images/lose_2.png" height="280px" alt="" />
+      </div>
       <h2>Game Over!</h2>
-      <p>Your final score: <span id="final-score"></span></p>
-      <p id="endgame-message">Result</p>
+      <h3 id="endgame-message">Result</h3>
+      <h3>Your final score: <span id="final-score"></span></h3>
       <button id="restart-button">Restart</button>
     </div>
 
