add sound effects

--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@
     <title>Mouse Catch Cheese Game</title>
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
+
   <body>
+    <audio id="start-sound" src="/sounds/running_sound.mp3"></audio>
+    <audio id="collect-cheese-sound" src="/sounds/hic-cup.wav"></audio>
+    <audio
+      id="jerry-scream-sound"
+      src="/sounds/TheCatsMeOuch-Ah-Ha.wav"
+    ></audio>
     <div id="splash-screen">
       <!-- <img src="./images/logo.png" alt="" class="logo-img" /> -->
 
