add mute button

--- a/index.html
+++ b/index.html
@@ -14,13 +14,15 @@
       id="jerry-scream-sound"
       src="/sounds/TheCatsMeOuch-Ah-Ha.wav"
     ></audio>
+    <audio id="jerry-win-sound" src="/sounds/the_end.wav"></audio>
+    <audio id="tom-catch-sound" src="/sounds/oh_no.wav"></audio>
     <div id="splash-screen">
       <!-- <img src="./images/logo.png" alt="" class="logo-img" /> -->
 
       <!-- <img src="./images/arrows.png" alt="" class="arrows-img" /> -->
 
       <div class="instructions">
-        <h3>HOW TO PLAY GAME:</h3>
+        <h3>HOW TO PLAY GAME</h3>
         <h4>Beware of Tom Cat , if you get caught bei him you loose !</h4>
         <h4>beware if you get caught 3 times you loose!</h4>
         <h4>Collect all the cheese during 15 second, well done you win!</h4>
@@ -37,8 +39,9 @@
       <div class="columnCharacter">
         <img src="/images/tom-and-gerry.png" height="250px" alt="" />
       </div>
-      <div></div>
+
       <button id="start-button">Start Game</button>
+      <button id="mute-button">Mute Game</button>
       <h5>A game made by Shaza Kashlan</h5>
       <h5>Cartoon created from 1940 by William Hanna and Joseph Barbera</h5>
     </div>
