fix images/sound path

--- a/index.html
+++ b/index.html
@@ -8,18 +8,15 @@
   </head>
 
   <body>
-    <audio id="start-sound" src="/sounds/running_sound.mp3"></audio>
-    <audio id="collect-cheese-sound" src="/sounds/hic-cup.wav"></audio>
-    <audio
-      id="jerry-scream-sound"
-      src="/sounds/TheCatsMeOuch-Ah-Ha.wav"
-    ></audio>
-    <audio id="jerry-win-sound" src="/sounds/the_end.wav"></audio>
-    <audio id="tom-catch-sound" src="/sounds/oh_no.wav"></audio>
+    <audio id="start-sound" src="sound/running_sound.mp3"></audio>
+    <audio id="collect-cheese-sound" src="sound/hic-cup.wav"></audio>
+    <audio id="jerry-scream-sound" src="sound/TheCatsMeOuch-Ah-Ha.wav"></audio>
+    <audio id="jerry-win-sound" src="sound/the_end.wav"></audio>
+    <audio id="tom-catch-sound" src="sound/oh_no.wav"></audio>
     <div id="splash-screen">
-      <!-- <img src="./images/logo.png" alt="" class="logo-img" /> -->
+      <!-- <img src=".images/logo.png" alt="" class="logo-img" /> -->
 
-      <!-- <img src="./images/arrows.png" alt="" class="arrows-img" /> -->
+      <!-- <img src=".images/arrows.png" alt="" class="arrows-img" /> -->
 
       <div class="instructions">
         <h3>HOW TO PLAY GAME</h3>
@@ -30,14 +27,14 @@
       <div class="controls">
         <h4>Use Left Right Up Down</h4>
         <img
-          src="/images/arrow-keys.png"
+          src="images/arrow-keys.png"
           alt="Controls Image"
           class="controls-img"
         />
       </div>
 
       <div class="columnCharacter">
-        <img src="/images/tom-and-gerry.png" height="250px" alt="" />
+        <img src="images/tom-and-gerry.png" height="250px" alt="" />
       </div>
 
       <button id="start-button">Start Game</button>
@@ -63,14 +60,14 @@
 
     <div id="endgame-screen">
       <div id="win-endscreen">
-        <img src="/images/win.png" height="280px" alt="" />
+        <img src="images/win.png" height="280px" alt="" />
         <div id="win2"></div>
       </div>
       <div id="lose-timer-endscreen">
-        <img src="/images/lose.png" height="280px" alt="" />
+        <img src="images/lose.png" height="280px" alt="" />
       </div>
       <div id="lose-catch-endscreen">
-        <img src="/images/lose_2.png" height="280px" alt="" />
+        <img src="images/lose_2.png" height="280px" alt="" />
       </div>
       <h2>Game Over!</h2>
       <h3 id="endgame-message">Result</h3>
