--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
   </head>
 
   <body>
-    <audio id="start-sound" src="sound/running_sound.mp3"></audio>
-    <audio id="collect-cheese-sound" src="sound/hic-cup.wav"></audio>
-    <audio id="jerry-scream-sound" src="sound/TheCatsMeOuch-Ah-Ha.wav"></audio>
-    <audio id="jerry-win-sound" src="sound/the_end.wav"></audio>
-    <audio id="tom-catch-sound" src="sound/oh_no.wav"></audio>
+    <audio id="start-sound" src="sounds/running_sound.mp3"></audio>
+    <audio id="collect-cheese-sound" src="sounds/hic-cup.wav"></audio>
+    <audio id="jerry-scream-sound" src="sounds/jerry_scream.mp3"></audio>
+    <audio id="jerry-win-sound" src="sounds/the_end.wav"></audio>
+    <audio id="tom-catch-sound" src="sounds/oh_no.wav"></audio>
     <div id="splash-screen">
       <!-- <img src=".images/logo.png" alt="" class="logo-img" /> -->
 
