--- a/index.html
+++ b/index.html
@@ -14,15 +14,13 @@
     <audio id="jerry-win-sound" src="sounds/the_end.wav"></audio>
     <audio id="tom-catch-sound" src="sounds/oh_no.wav"></audio>
     <div id="splash-screen">
-      <!-- <img src=".images/logo.png" alt="" class="logo-img" /> -->
-
-      <!-- <img src=".images/arrows.png" alt="" class="arrows-img" /> -->
-
       <div class="instructions">
         <h3>HOW TO PLAY GAME</h3>
         <h4>Beware of Tom Cat , if you get caught bei him you loose !</h4>
-        <h4>beware if you get caught 3 times you loose!</h4>
-        <h4>Collect all the cheese during 15 second, well done you win!</h4>
+        <h4>Beware if you get caught 3 times you loose!</h4>
+        <h4>
+          Collect at least 10 cheeses during 25 second, well done you win!
+        </h4>
       </div>
       <div class="controls">
         <h4>Use Left Right Up Down</h4>
@@ -32,7 +30,6 @@
           class="controls-img"
         />
       </div>
-
       <div class="columnCharacter">
         <img src="images/tom-and-gerry.png" height="250px" alt="" />
       </div>
@@ -42,12 +39,6 @@
       <h5>A game made by Shaza Kashlan</h5>
       <h5>Cartoon created from 1940 by William Hanna and Joseph Barbera</h5>
     </div>
-
-    <!-- <div id="sidebar">
-  <div id="score">Score: <span id="score-value">0</span></div>
-  <div id="timer">Time Left: <span id="time-left">30</span> seconds</div>
-  <div id="lives">Lives: <span id="lives-value">3</span></div>
-</div> -->
 
     <div id="game-container">
       <div id="mouse"></div>
@@ -71,7 +62,7 @@
       </div>
       <h2>Game Over!</h2>
       <h3 id="endgame-message">Result</h3>
-      <h3>Your final score: <span id="final-score"></span></h3>
+      <h4>Your final score: <span id="final-score"></span></h4>
       <button id="restart-button">Restart</button>
     </div>
 
