fix text in start screen

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <div id="splash-screen">
       <div class="instructions">
         <h3>HOW TO PLAY GAME</h3>
-        <h4>Beware of Tom Cat , if you get caught bei him you loose !</h4>
-        <h4>Beware if you get caught 3 times you loose!</h4>
+        <h4>Beware of Tom Cat , if you get caught bei him you Lose !</h4>
+        <h4>Beware if you get caught 3 times you Lose!</h4>
         <h4>
-          Collect at least 10 cheeses during 25 second, well done you win!
+          Collect at least 10 cheeses during 25 second, well done you Win!
         </h4>
       </div>
       <div class="controls">
